--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button id="click"><img src="954591.png" height="50" width="50" alt="" /></button>
       </div>
       <div class="list">
-        <h1 class="city">Weather Of Berlin</h1>
+        <h1 class="city"></h1>
         <div class="temp">Temprature ⇏ </div>
      
         <div class="description">Description  ⇏ </div>
